[gd_scene load_steps=7 format=3 uid="uid://cpnfni1rrouta"]

[ext_resource type="Script" path="res://HUD.gd" id="1_8nb7i"]
[ext_resource type="FontFile" uid="uid://cdsshahmdka48" path="res://fonts/Xolonium-Regular.ttf" id="2_n7gn1"]

[sub_resource type="Animation" id="Animation_syvxt"]
resource_name = "scaling"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2, 2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o475n"]
_data = {
"scaling": SubResource("Animation_syvxt")
}

[sub_resource type="InputEventAction" id="InputEventAction_4nspx"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_glnsg"]
events = [SubResource("InputEventAction_4nspx")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_8nb7i")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_direction = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 0.0

[node name="Message" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_n7gn1")
theme_override_font_sizes/font_size = 64
text = "Dodge
the
Creeps!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CenterContainer/Message")
libraries = {
"": SubResource("AnimationLibrary_o475n")
}

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -98.5
offset_top = -140.0
offset_right = 101.5
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_n7gn1")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_glnsg")
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -21.0
offset_right = 24.0
offset_bottom = 81.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_n7gn1")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
